--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,6 +17,9 @@ jobs:
         with:
           node-version: 16.x
       - uses: actions/checkout@v2
+      - uses: pnpm/action-setup@v2
+        with:
+          version: 8.11.0
 
       - name: Install Foundry
         uses: foundry-rs/foundry-toolchain@v1
